--- a/labs/progress-notifier/Makefile
+++ b/labs/progress-notifier/Makefile
@@ -1,2 +1,13 @@
+CC       = gcc
+OBJFILES = logger.o base64.o
+TARGET   = base64
+
+all: $(TARGET)
+
+$(TARGET) : $(OBJFILES)
+	$(CC) -o $(TARGET) $(OBJFILES)
+
+clean:
+	rm -f $(OBJFILES) $(TARGET) *~
 
 include ../../common.mk
